# nautiros

./: .gitignore
nautiros_bringup/: CMakeLists.txt  package.xml
nautiros_bringup/launch/: main.launch.py
nautiros_controller/: CMakeLists.txt  package.xml
nautiros_perception/: CMakeLists.txt  package.xml
