<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nautiros_controller</name>
    <version>0.0.0</version>
    <description>Controller package for nautiros</description>
    <maintainer email="toyatakahashi522@gmail.com">toyat</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>libncurses-dev</depend>
    <depend>rclcpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
